# ComputerGraphics

./: README.md
RayTrace_EX_1/: CMakeLists.txt  README.md
RayTrace_EX_1/src/: camera.h  integrator.h  light.h  main.cpp  material.h  math.h  object.h  primitive.h  scene.h  transform.h  utility.h
